--- a/index.html
+++ b/index.html
@@ -1,34 +1,15 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <title>ZООтека</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Merienda:700' rel='stylesheet' type='text/css'>
-  <link href="css/main.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <title>ZООтека</title>
+    <link href="main.css">
 </head>
-<body>
-
-<div class="navbar navbar-inverse navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-      <a class="brand" href="#myCarousel">Ветеринарный магазин</a>
-      <div class="nav-collapse collapse">
-        <ul class="nav pull-right">
-          <li class="active"><a href="#myCarousel">Главная</a></li>
-          <li><a href="#about">О нас</a></li>
-          <li><a href="#screenshots">Галерея</a></li>
-          <li><a href="#features">Список и цены</a></li>
-          <li><a href="#download">Контакты</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div>
+<header>
+    <div class="title">Ветеринарная аптека</div>
+    <ul class="menu">
+        <li><a href="#">Контакты</a></li>
+        <li><a href="#">О нас</a></li>
+        <li><a href="#">Услуги</a></li>
+    </ul>
+</header>
