--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="utf-8">
     <title>ZООтека</title>
-    <link href="main.css">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <header>
     <div class="title">Ветеринарная аптека</div>
-    <ul class="menu">
+    <ul>
         <li><a href="#">Контакты</a></li>
         <li><a href="#">О нас</a></li>
         <li><a href="#">Услуги</a></li>
