--- a/index.html
+++ b/index.html
@@ -2,39 +2,22 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <title>Инструктор Кекс</title>
-    <link rel="stylesheet" href="style.css">
+    <title>ZOO</title>
+    <link rel="stylesheet" href="main.css">
 </head>
+<header>ВетАптекарь</header>
 <body>
-<div class="container">
-    <header class="site-header">
-        <h1>Инструктор Кекс</h1>
-        <p>Обучение начинающих котят</p>
-        <img src="img/keks.png">
-    </header>
-
-    <section class="features">
-        <h2>Почему я?</h2>
-        <p class="feature-kitten">Я сам был котёнком, и вот я здесь</p>
-        <p class="feature-train">Хозяин натренирован на 100%</p>
-        <p class="feature-cat">Профессиональный кот уже более 5 лет</p>
+<main>
+    <nav>Навигация</nav>
+    <section>
+        <p> Описание 1</p>
+        <p> Описание 2</p>
     </section>
-
-    <section class="skills">
-        <h2>Чему вы научитесь?</h2>
-        <ul class="skills-list">
-            <li class="skills-item">таскать еду из хозяйской тарелки;</li>
-            <li class="skills-item standart">придавать мебели винтажный стиль;</li>
-            <li class="skills-item standart">открывать дверь и не входить;</li>
-            <li class="skills-item vip">будить хозяина ночью;</li>
-            <li class="skills-item vip">разбрасывать шерсть по квартире.</li>
-        </ul>
-    </section>
-
-    <footer class="site-footer">
-        <p>© Кекс, 2018</p>
-        <p>Контактов нет, я сам вас найду</p>
-    </footer>
-</div>
+    <aside> Сайдбар</aside>
+</main>
+<footer>
+    Подвал сайта
+</footer>
 </body>
 </html>
+
