--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
     <title>ZOO</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<header>ВетАптекарь</header>
+<header>
+    <h1>ВетАптекарь</h1>
+</header>
 <body>
 <main>
-    <nav>Навигация</nav>
-    <section>
-        <p> Описание 1</p>
-        <p> Описание 2</p>
-    </section>
+    <div>
+        <ul>
+            <li><a href="#">Новости</a></li>
+            <li><a href="#">О нас</a></li>
+            <li><a href="#">Контакты</a></li>
+        </ul>
+    </div>
     <aside> Сайдбар</aside>
 </main>
 <footer>
