--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
 <header>
     <h1>ВетАптекарь</h1>
 </header>
-<body>
-<main>
     <div>
-        <ul>
+        <ul class="menu">
             <li><a href="#">Новости</a></li>
             <li><a href="#">О нас</a></li>
             <li><a href="#">Контакты</a></li>
         </ul>
     </div>
+
+<body>
+<main>
     <aside> Сайдбар</aside>
 </main>
 <footer>
