--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>ZOO</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <header>
     <h1>ВетАптекарь</h1>
-</header>
     <div>
         <ul class="menu">
             <li><a href="#">О нас</a></li>
@@ -15,6 +14,7 @@
             <li><a href="#">Контакты</a></li>
         </ul>
     </div>
+</header>
 <body>
 <main>
     <aside> Сайдбар</aside>
