--- a/css/index.html
+++ b/css/index.html
@@ -28,4 +28,9 @@
             <a href="#">&#9993;</a>
         </nav>
     </header>
+    <bodi>
+        <div class="image-align">
+        <img src="img/10583094099998.png" style="width: 600px"/>
 
+        </div>
+    </bodi>
