--- a/css/index.html
+++ b/css/index.html
@@ -28,9 +28,14 @@
             <a href="#">&#9993;</a>
         </nav>
     </header>
+
     <bodi>
         <div class="image-align">
-        <img src="img/10583094099998.png" style="width: 600px"/>
+            <img src="img/10583094099998.png" style="width: 600px"/>
 
-        </div>
+            <div class="dark_block"><br>
+                <div class="content">Мы помогаем чувствувать себя хорошо в любой из слажившихся ситуаций!
+                    <br></div>
+                </div>
+            </div>
     </bodi>
