--- a/css/index.html
+++ b/css/index.html
@@ -34,8 +34,9 @@
             <img src="img/10583094099998.png" style="width: 600px"/>
 
             <div class="dark_block"><br>
-                <div class="content">Мы помогаем чувствувать себя хорошо в любой из слажившихся ситуаций!
-                    <br></div>
+                <div class="content">Мы помогаем чувствувать себя <font color="#8b0000">
+                    хорошо </font> в любой из слажившихся ситуаций!</br>
                 </div>
+            </div>
             </div>
     </bodi>
