--- a/css/index.html
+++ b/css/index.html
@@ -24,20 +24,35 @@
                 <div class="content">Мы помогаем чувствувать себя <font color="#8b0000">
                     хорошо </font> в любой из слажившихся ситуаций!</br>
                 </div>
+
+
             </div>
+            <div class="outline-3" align="center">
+                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
+                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
+                    в форму ниже, и как только я напишу статью на блоге,
+                    ты первым об этом узнаешь!
+                </p>
+
             </div>
-        <div class="content_blok">
-        <div class="blok1">
-           <h3>первое</h3>
-            <p>dvdifjvifnifnbijfndfjfineiriuefnifn jd ifniuenbiubnfibsiio jeivjwvnjwdn</p>
+
+            <div class="outline-3" align="center">
+                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
+                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
+                    в форму ниже, и как только я напишу статью на блоге,
+                    ты первым об этом узнаешь!
+                </p>
+
+            </div>
+
+            <div class="outline-3" align="center">
+                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
+                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
+                    в форму ниже, и как только я напишу статью на блоге,
+                    ты первым об этом узнаешь!
+                </p>
+
+            </div>
         </div>
-        <div class="blok2">
-            <h3>второе</h3>
-            <p>feveiuhbeiuvherp9 jrveibvefbiuefbv iruherbhreuvhreuvhhjn 09rvrnv ihjriuhirh irvj</p>
-        </div>
-        <div class="blok3">
-            <h3>третье</h3>
-            <p>vnfhvf jvefiuvhuh urvhrueuh843uhv wevfvfnjdnvjf jiervf iuvefibifvn ieneinfin  jievnrijbnfin eifbi</p>
-        </div>
-        </div>
+
     </bodi>
