--- a/index.html
+++ b/index.html
@@ -1,28 +1,58 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="utf-8">
-    <title>ZOO</title>
     <link rel="stylesheet" href="css/main.css">
-</head>
-<header>
-    <h1>ВетАптекарь</h1>
-    <div>
-        <ul class="menu">
-            <li><a href="#">О нас</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="#">Контакты</a></li>
-        </ul>
+    <title>Ветаптека</title>
+    <header>
+        <div class="wrap-logo">
+            <a href="#logo" class="logo">Вет&#9937;Аптека</a>
+        </div>
+        <nav>
+            <a href="#home">Главная</a>
+            <a href="#contact">Контакты</a>
+            <a href="#about">О нас</a>
+            <a href="#">&#9993;</a>
+        </nav>
+    </header>
 
-    </div>
-</header>
-<body>
-<main>
-    <aside> Сайдбар</aside>
-</main>
-<footer>
-    Подвал сайта
-</footer>
-</body>
-</html>
+    <bodi>
+        <div class="image-align">
+            <img src="img/10583094099998.png" style="width: 600px"/>
 
+            <div class="dark_block"><br>
+                <div class="content">Мы помогаем чувствувать себя <font color="#8b0000">
+                    хорошо </font> в любой из слажившихся ситуаций!</br>
+                </div>
+
+
+            </div>
+            <div class="outline-3" align="center">
+                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
+                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
+                    в форму ниже, и как только я напишу статью на блоге,
+                    ты первым об этом узнаешь!
+                </p>
+
+            </div>
+
+            <div class="outline-3" align="center">
+                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
+                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
+                    в форму ниже, и как только я напишу статью на блоге,
+                    ты первым об этом узнаешь!
+                </p>
+
+            </div>
+
+            <div class="outline-3" align="center">
+                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
+                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
+                    в форму ниже, и как только я напишу статью на блоге,
+                    ты первым об этом узнаешь!
+                </p>
+
+            </div>
+        </div>
+
+    </bodi>
