--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
         </nav>
     </header>
 
-    <bodi>
+    <body>
         <div class="image-align">
             <img src="img/10583094099998.png" style="width: 600px"/>
 
-            <div class="dark_block"><br>
+            <div>class="dark_block"><br>
                 <div class="content">Мы помогаем чувствувать себя <font color="#8b0000">
                     хорошо </font> в любой из слажившихся ситуаций!</br>
                 </div>
-
-
             </div>
+        </div>
+
+
+           <section class="blocs">
+
             <div class="outline-3" align="center">
                 <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
                     с картинками и видео в свой почтовый ящик, то введи свой E-mail
@@ -54,5 +57,5 @@
 
             </div>
         </div>
-
-    </bodi>
+           </section>
+    </body>
