--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="image-align">
             <img src="img/10583094099998.png" style="width: 600px"/>
 
-            <div>class="dark_block"><br>
+            <div class="dark_block"><br>
                 <div class="content">Мы помогаем чувствувать себя <font color="#8b0000">
                     хорошо </font> в любой из слажившихся ситуаций!</br>
                 </div>
@@ -54,8 +54,6 @@
                     в форму ниже, и как только я напишу статью на блоге,
                     ты первым об этом узнаешь!
                 </p>
-
             </div>
-        </div>
            </section>
     </body>
