--- a/index.html
+++ b/index.html
@@ -17,43 +17,37 @@
     </header>
 
     <body>
-        <div class="image-align">
-            <img src="img/10583094099998.png" style="width: 600px"/>
+    <div class="image-align">
+        <img src="img/10583094099998.png" style="width: 600px"/>
 
-            <div class="dark_block"><br>
-                <div class="content">Мы помогаем чувствувать себя <font color="#8b0000">
-                    хорошо </font> в любой из слажившихся ситуаций!</br>
-                </div>
+        <div class="dark_block"><br>
+            <div class="content">Мы помогаем чувствувать себя <font color="#8b0000">
+                хорошо </font> в любой из сложившихся ситуаций!</br>
             </div>
         </div>
+    </div>
 
+    <section id="restaurant-description">
+        <div class="col-3 anim1">
+            <p>
+                С 2001 года ВетАптека предлагает выбор инновационных товаров классики различных производителей.
+                Лекарства варьируются от множественного колличества первоклассных поставщиков.
+            </p>
+        </div>
+        <div class="col-3 anim1">
+            <p>
+                ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
+                ВетАптека, как известно, является «местом встречи многих хозяев домашних питомцев», и его видели в
+                различных журналах.
+            </p>
+        </div>
+        <div class="col-3 anim1">
+            <i class="icon ion-md-contacts features-icon"></i>
+            <p>
+                В нашем городе это отличное место, чтобы быстро избавить вашего питомца от боли, первокласные продавцы
+                ввсегда вам помогут.
+            </p>
+        </div>
 
-           <section class="blocs">
-
-            <div class="outline-3" align="center">
-                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
-                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
-                    в форму ниже, и как только я напишу статью на блоге,
-                    ты первым об этом узнаешь!
-                </p>
-
-            </div>
-
-            <div class="outline-3" align="center">
-                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
-                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
-                    в форму ниже, и как только я напишу статью на блоге,
-                    ты первым об этом узнаешь!
-                </p>
-
-            </div>
-
-            <div class="outline-3" align="center">
-                <p class="text-2">Если ты хочешь получать свежие подробные статьи этого блога
-                    с картинками и видео в свой почтовый ящик, то введи свой E-mail
-                    в форму ниже, и как только я напишу статью на блоге,
-                    ты первым об этом узнаешь!
-                </p>
-            </div>
-           </section>
+    </section>
     </body>
