--- a/index.html
+++ b/index.html
@@ -29,23 +29,24 @@
 
     <section id="restaurant-description">
         <div class="col-3 anim1">
+            <h4 >Орисание</h4>&#10010;
             <p>
                 С 2001 года ВетАптека предлагает выбор инновационных товаров классики различных производителей.
                 Лекарства варьируются от множественного колличества первоклассных поставщиков.
             </p>
         </div>
         <div class="col-3 anim1">
-            <p>
-                ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
-                ВетАптека, как известно, является «местом встречи многих хозяев домашних питомцев», и его видели в
-                различных журналах.
+            <h4 >Помощь</h4> &#128075;
+            <p>  В нашем городе это отличное место, чтобы быстро избавить вашего питомца от боли, первокласные продавцы
+                ввсегда вам помогут.
+
             </p>
         </div>
         <div class="col-3 anim1">
-            <i class="icon ion-md-contacts features-icon"></i>
-            <p>
-                В нашем городе это отличное место, чтобы быстро избавить вашего питомца от боли, первокласные продавцы
-                ввсегда вам помогут.
+          <h4 >Достижения</h4> &#128521;
+            <p>  ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
+                ВетАптека, как известно, является «местом встречи многих хозяев домашних питомцев», и его видели в
+                различных журналах.
             </p>
         </div>
 
