--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
 
     <section id="restaurant-description">
         <div class="col-3 anim1">
-            <h4 >Орисание</h4>&#10010;
+            <h4 align="center">Описание&#10010;</h4>
             <p>
-                С 2001 года ВетАптека предлагает выбор инновационных товаров классики различных производителей.
+                С 2010 года ВетАптека предлагает выбор инновационных товаров классики различных производителей.
                 Лекарства варьируются от множественного колличества первоклассных поставщиков.
             </p>
         </div>
         <div class="col-3 anim1">
-            <h4 >Помощь</h4> &#128075;
+            <h4 align="center">Помощь&#128075;</h4>
             <p>  В нашем городе это отличное место, чтобы быстро избавить вашего питомца от боли, первокласные продавцы
                 ввсегда вам помогут.
 
             </p>
         </div>
         <div class="col-3 anim1">
-          <h4 >Достижения</h4> &#128521;
+          <h4 align="center">Достижения &#128521;</h4>
             <p>  ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
                 ВетАптека, как известно, является «местом встречи многих хозяев домашних питомцев», и его видели в
                 различных журналах.
