--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
@@ -28,22 +28,22 @@
     </div>
 
     <section id="restaurant-description">
-        <div class="col-3 anim1">
-            <h4 align="center">Описание&#128075;</h4>
+        <div class="col-3 anim1"  style="padding-top: 0">
+            <h3 align="center"><br>&#128075;</br>Описание</h3>
             <p>
                 С 2010 года ВетАптека предлагает выбор инновационных товаров классики различных производителей.
                 Лекарства варьируются от множественного колличества первоклассных поставщиков.
             </p>
         </div>
-        <div class="col-3 anim1">
-            <h4 align="center">Помощь&#10010;</h4>
+        <div class="col-3 anim1"  style="padding-top: 0">
+            <h3 align="center"><br>&#10010;</br>Помощь</h3>
             <p>  В нашем городе это отличное место, чтобы быстро избавить вашего питомца от боли, первокласные продавцы
                 ввсегда вам помогут.
 
             </p>
         </div>
-        <div class="col-3 anim1">
-          <h4 align="center">Достижения &#128521;</h4>
+        <div class="col-3 anim1" style="padding-top: 0">
+          <h3 align="center"><br>&#128521;</br>Достижение</h3>
             <p>  ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
                 ВетАптека, как известно, является «местом встречи многих хозяев домашних питомцев», и его видели в
                 различных журналах.
