--- a/index.html
+++ b/index.html
@@ -27,28 +27,40 @@
         </div>
     </div>
 
-    <section id="restaurant-description">
-        <div class="col-3 anim1"  style="padding-top: 0">
+    <section class="colona">
+        <div class="col-3 anim1" style="padding-top: 0">
             <h3 align="center"><br>&#128075;</br>Описание</h3>
             <p>
                 С 2010 года ВетАптека предлагает выбор инновационных товаров классики различных производителей.
                 Лекарства варьируются от множественного колличества первоклассных поставщиков.
             </p>
         </div>
-        <div class="col-3 anim1"  style="padding-top: 0">
+        <div class="col-3 anim1" style="padding-top: 0">
             <h3 align="center"><br>&#10010;</br>Помощь</h3>
-            <p>  В нашем городе это отличное место, чтобы быстро избавить вашего питомца от боли, первокласные продавцы
+            <p> В нашем городе это отличное место, чтобы быстро избавить вашего питомца от боли, первокласные продавцы
                 ввсегда вам помогут.
 
             </p>
         </div>
         <div class="col-3 anim1" style="padding-top: 0">
-          <h3 align="center"><br>&#128521;</br>Достижение</h3>
-            <p>  ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
+            <h3 align="center"><br>&#128521;</br>Достижение</h3>
+            <p> ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
                 ВетАптека, как известно, является «местом встречи многих хозяев домашних питомцев», и его видели в
                 различных журналах.
             </p>
         </div>
-
     </section>
+
+
+    <div class="colonas2">
+        <div class="images">
+            <img src="img/311-3114468_cute-cat-transparent-background.png" height="200" width="200"/>
+        </div>
+        <div class="images2">
+            <img src="img/72-728614_cat-kitten-cute-cute-cat-png.png" height="200" width="200"/>
+        </div>
+        <div class="images3">
+            <img src="img/cat_PNG50509.png" height="200" width="200"/>
+        </div>
+    </div>
     </body>
