--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
 
 
-    <div class="colonas2">
+    <section class="colonas2">
         <div class="images">
             <img src="img/311-3114468_cute-cat-transparent-background.png" height="200" width="200"/>
         </div>
@@ -62,5 +62,5 @@
         <div class="images3">
             <img src="img/cat_PNG50509.png" height="200" width="200"/>
         </div>
-    </div>
+    </section>
     </body>
