--- a/index.html
+++ b/index.html
@@ -45,7 +45,20 @@
             <h3 align="center"><br>&#10010;</br>Помощь</h3>
             <p> В нашем городе это отличное место, чтобы быстро избавить вашего питомца от боли, первокласные продавцы
                 ввсегда вам помогут.
-
+            </p>
+        </div>
+        <div class="col-3 anim1" style="padding-top: 0">
+            <h3 align="center"><br>&#128521;</br>Достижение</h3>
+            <p> ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
+                ВетАптека, как известно, является «местом встречи многих хозяев домашних питомцев», и его видели в
+                различных журналах.
+            </p>
+        </div>
+        <div class="col-3 anim1" style="padding-top: 0">
+            <h3 align="center"><br>&#128521;</br>Достижение</h3>
+            <p> ВетАптека была показана на телевизионном канале РеН ТВ как один из лучших магазинов. Кроме того,
+                ВетАптека, как известно, является «местом встречи многих хозяев домашних питомцев», и его видели в
+                различных журналах.
             </p>
         </div>
         <div class="col-3 anim1" style="padding-top: 0">
@@ -59,14 +72,14 @@
 
 
     <section class="colonas2">
-        <div class="images">
+        <div class="images3">
+            <img src="img/56cc53eb1a0a41530e27ce63.png" height="200" width="200"/>
+        </div>
+        <div class="images3">
             <img src="img/311-3114468_cute-cat-transparent-background.png" height="200" width="200"/>
         </div>
         <div class="images2">
             <img src="img/72-728614_cat-kitten-cute-cute-cat-png.png" height="200" width="200"/>
-        </div>
-        <div class="images3">
-            <img src="img/cat_PNG50509.png" height="200" width="200"/>
         </div>
     </section>
     </body>
