--- a/index.html
+++ b/index.html
@@ -76,4 +76,63 @@
         </div>
         </div>
     </section>
+
+
+
+    <div id="blue">
+        <div class="container">
+            <div class="row centered">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h4>LEARN MORE ABOUT US</h4>
+                    <p>WE ARE COOL PEOPLE</p>
+                </div>
+            </div>
+            <!-- row -->
+        </div>
+        <!-- container -->
+    </div>
+    <!--  bluewrap -->
+
+
+    <div class="container w">
+        <div class="row centered">
+            <br><br>
+            <div class="col-lg-3">
+                <img class="img-circle" src="img/10583094099998.png" width="110" height="110" alt="">
+                <h4>Frank Lampard</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                <p><a href="#">@Frank_BlackTie</a></p>
+            </div>
+            <!-- col-lg-3 -->
+
+            <div class="col-lg-3">
+                <img class="img-circle" src="img/pic2.jpg" width="110" height="110" alt="">
+                <h4>David Wright</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                <p><a href="#">@David_BlackTie</a></p>
+            </div>
+            <!-- col-lg-3 -->
+
+            <div class="col-lg-3">
+                <img class="img-circle" src="img/pic3.jpg" width="110" height="110" alt="">
+                <h4>Mark Milestone</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                <p><a href="#">@Mark_BlackTie</a></p>
+            </div>
+            <!-- col-lg-3 -->
+
+            <div class="col-lg-3">
+                <img class="img-circle" src="img/pic4.jpg" width="110" height="110" alt="">
+                <h4>Tania Tissen</h4>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                <p><a href="#">@Tania_BlackTie</a></p>
+            </div>
+            <!-- col-lg-3 -->
+
+        </div>
+        <!-- row -->
+        <br>
+        <br>
+    </div>
+
     </body>
