--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <!-- col-lg-3 -->
 
             <div class="col-lg-3">
-                <img class="img-circle" src="img/pic2.jpg" width="110" height="110" alt="">
+                <img class="img-circle" src="img/10583094099998.png" width="110" height="110" alt="">
                 <h4>David Wright</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
                 <p><a href="#">@David_BlackTie</a></p>
@@ -113,7 +113,7 @@
             <!-- col-lg-3 -->
 
             <div class="col-lg-3">
-                <img class="img-circle" src="img/pic3.jpg" width="110" height="110" alt="">
+                <img class="img-circle" src="img/10583094099998.png" width="110" height="110" alt="">
                 <h4>Mark Milestone</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
                 <p><a href="#">@Mark_BlackTie</a></p>
@@ -121,7 +121,7 @@
             <!-- col-lg-3 -->
 
             <div class="col-lg-3">
-                <img class="img-circle" src="img/pic4.jpg" width="110" height="110" alt="">
+                <img class="img-circle" src="img/10583094099998.png" width="110" height="110" alt="">
                 <h4>Tania Tissen</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
                 <p><a href="#">@Tania_BlackTie</a></p>
