--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
             crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
     <title>Ветаптека</title>
-    <header>
-        <div class="wrap-logo">
-            <a href="#logo" class="logo">Вет&#9937;Аптека</a>
-        </div>
-        <nav>
-            <a href="#home">Главная</a>
-            <a href="#contact">Контакты</a>
-            <a href="#about">О нас</a>
-            <a href="#">&#9993;</a>
-        </nav>
-    </header>
-
-    <body>
-    <div class="image-align">
+</head>
+<body>
+<header>
+    <section class="wrap-logo">
+        <a href="#logo" class="logo">Вет&#9937;Аптека</a>
+    </section>
+    <nav>
+        <a href="#home">Главная</a>
+        <a href="#contact">Контакты</a>
+        <a href="#about">О нас</a>
+        <a href="#">&#9993;</a>
+    </nav>
+</header>
+<main>
+    <section class="image-align">
         <img src="img/10583094099998.png" style="width: 600px"/>
 
         <div class="dark_block"><br>
@@ -31,7 +32,7 @@
                 хорошо </font> в любой из сложившихся ситуаций!</br>
             </div>
         </div>
-    </div>
+    </section>
 
     <section class="colona">
         <div class="col-3 anim1" style="padding-top: 0">
@@ -61,7 +62,7 @@
                 различных журналах.
             </p>
         </div>
-         </section>
+    </section>
 
 
     <section class="colonas2">
@@ -99,7 +100,9 @@
             <div class="col-lg-3">
                 <img class="img-circle" src="img/10583094099998.png" width="110" height="110" alt="">
                 <h4>Frank Lampard</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration
+                    in some form.</p>
                 <p><a href="#">@Frank_BlackTie</a></p>
             </div>
             <!-- col-lg-3 -->
@@ -107,7 +110,9 @@
             <div class="col-lg-3">
                 <img class="img-circle" src="img/10583094099998.png" width="110" height="110" alt="">
                 <h4>David Wright</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration
+                    in some form.</p>
                 <p><a href="#">@David_BlackTie</a></p>
             </div>
             <!-- col-lg-3 -->
@@ -115,7 +120,9 @@
             <div class="col-lg-3">
                 <img class="img-circle" src="img/10583094099998.png" width="110" height="110" alt="">
                 <h4>Mark Milestone</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration
+                    in some form.</p>
                 <p><a href="#">@Mark_BlackTie</a></p>
             </div>
             <!-- col-lg-3 -->
@@ -123,7 +130,9 @@
             <div class="col-lg-3">
                 <img class="img-circle" src="img/10583094099998.png" width="110" height="110" alt="">
                 <h4>Tania Tissen</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration
+                    in some form.</p>
                 <p><a href="#">@Tania_BlackTie</a></p>
             </div>
             <!-- col-lg-3 -->
@@ -133,5 +142,6 @@
         <br>
         <br>
     </div>
-
-    </body>
+</main>
+<footer></footer>
+</body>
