--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
 <header>
-    <section class="wrap-logo">
+    <div class="wrap-logo">
         <a href="#logo" class="logo">Вет&#9937;Аптека</a>
-    </section>
+    </div>
     <nav>
         <a href="#home">Главная</a>
         <a href="#contact">Контакты</a>
@@ -79,7 +79,7 @@
     </section>
 
 
-    <div class="container w">
+    <section class="container w">
 
         <div id="blue">
             <div class="container">
@@ -141,7 +141,7 @@
         <!-- row -->
         <br>
         <br>
-    </div>
+    </section>
 </main>
 <footer></footer>
 </body>
