--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </section>
 
 
-    <section class="container w">
+    <div class="container w">
 
         <div id="blue">
             <div class="container">
@@ -141,7 +141,7 @@
         <!-- row -->
         <br>
         <br>
-    </section>
+    </div>
 </main>
 <footer></footer>
 </body>
